--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -243,37 +243,37 @@
     }
 
     function loadProgress(studentId) {
-      const progressContainer = document.getElementById('progress-container');
-      const progressRef = db.ref(`usuarios/${studentId}/progresso`);
-      
-      progressRef.once('value', snapshot => {
-        if (snapshot.exists()) {
-          let progressHTML = '<h3>Your Progress</h3>';
-          snapshot.forEach(levelSnap => {
-            const level = levelSnap.key;
-            progressHTML += `<p><strong>Level ${level}</strong></p>`;
-            levelSnap.forEach(unitSnap => {
-              const unit = unitSnap.key;
-              progressHTML += `<p>Unit ${unit}</p>`;
-              unitSnap.forEach(phaseSnap => {
-                const phase = phaseSnap.key;
-                const isComplete = phaseSnap.val();
+  const progressContainer = document.getElementById('progress-container');
+  const progressRef = db.ref(`usuarios/${studentId}/progresso`);
+  
+  progressRef.once('value', snapshot => {
+    if (snapshot.exists()) {
+      let progressHTML = '<h3>Your Progress</h3>';
+      snapshot.forEach(levelSnap => {
+        const level = levelSnap.key.replace('Level', ''); // Remove "Level"
+        progressHTML += `<p><strong>Level ${level}</strong></p>`;
+        levelSnap.forEach(unitSnap => {
+          const unit = unitSnap.key.replace('Unit', ''); // Remove "Unit"
+          progressHTML += `<p>Unit ${unit}</p>`;
+          unitSnap.forEach(phaseSnap => {
+            const phase = phaseSnap.key.replace('fase', ''); // Remove "fase"
+            const isComplete = phaseSnap.val();
 
-                progressHTML += `
-                  <p>Phase ${phase}: ${isComplete ? 'Complete' : 'Incomplete'}</p>
-                `;
-              });
-            });
+            progressHTML += `
+              <p>Phase ${phase}: ${isComplete ? 'Complete' : 'Incomplete'}</p>
+            `;
           });
-          progressContainer.innerHTML = progressHTML;
-        } else {
-          progressContainer.innerHTML = '<p>No progress data available.</p>';
-        }
-      }).catch(error => {
-        console.error("Error loading progress:", error);
-        progressContainer.innerHTML = '<p>Error loading progress data. Please try again later.</p>';
+        });
       });
+      progressContainer.innerHTML = progressHTML;
+    } else {
+      progressContainer.innerHTML = '<p>No progress data available.</p>';
     }
+  }).catch(error => {
+    console.error("Error loading progress:", error);
+    progressContainer.innerHTML = '<p>Error loading progress data. Please try again later.</p>';
+  });
+}
   </script>
 </body>
 </html>
