--- a/painel_professor.html
+++ b/painel_professor.html
@@ -186,7 +186,8 @@
       <option value="avatar_professor4.png">Avatar 4</option>
     </select>
     <img id="avatar-preview" src="imagens/avatar_professor1.png" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
-    
+    <div id="loading-spinner" style="display: none; margin-top: 10px;">Loading...</div>
+
     <button onclick="saveTeacherData()">Save Changes</button>
   </div>
 
@@ -239,9 +240,32 @@
     }
 
     document.getElementById('teacher-avatar').addEventListener('change', function() {
-      const avatar = this.value;
-      document.getElementById('avatar-preview').src = 'imagens/' + avatar;
-    });
+  const avatar = this.value;
+  const avatarPreview = document.getElementById('avatar-preview');
+  const loadingSpinner = document.getElementById('loading-spinner');
+  
+  // Mostrar o spinner de carregamento
+  loadingSpinner.style.display = 'block';
+  avatarPreview.style.display = 'none';
+
+  // Criar um novo objeto de imagem para garantir o carregamento correto
+  const img = new Image();
+  img.src = 'imagens/' + avatar;
+
+  img.onload = function() {
+    // Atualizar a imagem do avatar quando terminar de carregar
+    avatarPreview.src = img.src;
+
+    // Ocultar o spinner e mostrar o avatar carregado
+    loadingSpinner.style.display = 'none';
+    avatarPreview.style.display = 'block';
+  };
+
+  img.onerror = function() {
+    // Se houver erro no carregamento, mostrar mensagem de erro e ocultar o spinner
+    loadingSpinner.textContent = 'Error loading avatar';
+  };
+});
 
     function addStudentToClass(teacherId, classId) {
       const emailInput = document.getElementById(`student-email-${classId}`);
