--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -85,6 +85,12 @@ function generatePDF() {
     doc.setFontSize(20);
     doc.text(storyTitle, 105, 80, { align: "center" });
 
+// Verifica se storyText foi carregado
+if (!storyText) {
+    alert("A história ainda não foi carregada. Tente novamente.");
+    return;
+}
+
     // Texto da história
     doc.setFontSize(12);
     let y = 100;  // Posição inicial para o texto
@@ -133,6 +139,8 @@ async function loadContent() {
     storyText = cards.map(card => card.text).join('\n\n');
     return cards;
 }
+
+document.addEventListener("DOMContentLoaded", init);
     </script>
 
     <style>
