--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -31,6 +31,31 @@
     let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
     let storyText = ""; // Variável que irá conter o texto da história
 
+// Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
+    function checkUserRole() {
+        firebase.auth().onAuthStateChanged(async function(user) {
+            if (user) {
+                const uid = user.uid;
+                const roleRef = firebase.database().ref(`usuarios/${uid}/role`);
+                const snapshot = await roleRef.once('value');
+                const role = snapshot.val();
+
+                // Exibe o botão PDF se o role for "professor" ou "proprietário"
+                if (role === "professor" || role === "proprietário") {
+                    document.getElementById("pdfButton").style.display = "block";
+                }
+            } else {
+                console.log("Nenhum usuário logado.");
+            }
+        });
+    }
+
+    // Verifica o role do usuário ao carregar a página
+    document.addEventListener("DOMContentLoaded", () => {
+        checkUserRole();
+        init();  // Carrega o conteúdo inicial da página
+    });
+
         // Função para identificar Level, Unit e fase atual pelo URL
         function getParamsFromURL() {
             const urlParams = new URLSearchParams(window.location.search);
@@ -260,7 +285,7 @@ document.addEventListener("DOMContentLoaded", init);
         <h1>Hannah StoryCard</h1>
         <div class="button-container">
             <button id="toggleButton" onclick="toggleView()">Read the story</button>
-            <button onclick="generatePDF()">Generate PDF</button>
+            <button id="pdfButton" onclick="generatePDF()" style="display: none;">Generate PDF</button>
         </div>
         <div class="title" id="storyTitle"></div>
         <div id="cardsContainer"></div>
