--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -276,6 +276,15 @@ document.addEventListener("DOMContentLoaded", init);
             gap: 10px;
             margin-bottom: 20px;
         }
+
+    .story-text {
+        background-color: #e7f3ff; /* cor de fundo azul claro */
+        padding: 20px;
+        border-radius: 10px;
+        margin: 0 auto; /* centraliza o elemento */
+        max-width: 80%; /* ajuste a largura conforme necessário */
+        text-align: center;
+    }
     </style>
 </head>
 <body>
@@ -316,8 +325,8 @@ document.addEventListener("DOMContentLoaded", init);
             cardElement.className = 'card active';
 
             if (showText) {
-                cardElement.innerHTML = `<div class="card-text"><p>${cardData.text}</p></div>`;
-            } else {
+                cardElement.innerHTML = `<div class="story-text"><p>${cardData.text}</p></div>`;
+    } else {
                 cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
