--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -36,7 +36,7 @@
         firebase.auth().onAuthStateChanged(async function(user) {
             if (user) {
                 const uid = user.uid;
-                const roleRef = firebase.database().ref(`usuarios/${uid}/role`);
+                const roleRef = firebase.database().ref(usuarios/${uid}/role);
                 const snapshot = await roleRef.once('value');
                 const role = snapshot.val();
 
@@ -69,26 +69,26 @@
         // Função para salvar progresso no Firebase com todas as regras
         async function salvarProgressoAluno(uid, fase) {
             const { level, unit } = getParamsFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
+            const dbRef = firebase.database().ref(usuarios/${uid}/progresso);
 
             try {
                 if (fase === "end") {
                     // Criar nova Level com Unit1/fase1
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    const nextLevel = Level${parseInt(level.replace('Level', '')) + 1};
                     await dbRef.child(nextLevel).set({});
-                    await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
-                    console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
+                    await dbRef.child(${nextLevel}/Unit1/fase1).set(true);
+                    console.log(Nova Level ${nextLevel} criada com Unit1/fase1.);
                 } else if (fase === "last") {
                     // Criar nova Unit com fase1
-                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    await dbRef.child(`${level}/${nextUnit}`).set({});
-                    await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
-                    console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
+                    const nextUnit = Unit${parseInt(unit.replace('Unit', '')) + 1};
+                    await dbRef.child(${level}/${nextUnit}).set({});
+                    await dbRef.child(${level}/${nextUnit}/fase1).set(true);
+                    console.log(Nova Unit ${nextUnit} criada com fase1 em ${level}.);
                 } else {
                     // Criar próxima fase na mesma Unit
-                    const nextFase = `fase${parseInt(fase) + 1}`;
-                    await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
-                    console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
+                    const nextFase = fase${parseInt(fase) + 1};
+                    await dbRef.child(${level}/${unit}/${nextFase}).set(true);
+                    console.log(Fase ${nextFase} criada em ${level}/${unit}.);
                 }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
@@ -276,15 +276,6 @@ document.addEventListener("DOMContentLoaded", init);
             gap: 10px;
             margin-bottom: 20px;
         }
-
-    .story-text {
-        background-color: #e7f3ff; /* cor de fundo azul claro */
-        padding: 20px;
-        border-radius: 10px;
-        margin: 0 auto; /* centraliza o elemento */
-        max-width: 80%; /* ajuste a largura conforme necessário */
-        text-align: center;
-    }
     </style>
 </head>
 <body>
@@ -325,9 +316,9 @@ document.addEventListener("DOMContentLoaded", init);
             cardElement.className = 'card active';
 
             if (showText) {
-                cardElement.innerHTML = `<div class="story-text"><p>${cardData.text}</p></div>`;
-    } else {
-                cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
+                cardElement.innerHTML = <div class="card-text"><p>${cardData.text}</p></div>;
+            } else {
+                cardElement.innerHTML = <img src="images/${cardData.image}.jpeg" alt="Image">;
             }
 
             const businessmanImage = document.createElement('img');
