--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -277,6 +277,14 @@ document.addEventListener("DOMContentLoaded", init);
             margin-bottom: 20px;
         }
 
+    .story-text {
+        background-color: #e7f3ff; /* cor de fundo azul claro */
+        padding: 20px;
+        border-radius: 10px;
+        margin: 0 auto; /* centraliza o elemento */
+        max-width: 80%; /* ajuste a largura conforme necessário */
+        text-align: center;
+    }
     </style>
 </head>
 <body>
