--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -28,33 +28,33 @@
         firebase.initializeApp(firebaseConfig);
 
         // Variáveis globais para o título e texto da história para o PDF
-    let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
-    let storyText = ""; // Variável que irá conter o texto da história
+        let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
+        let storyText = ""; // Variável que irá conter o texto da história
 
-// Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
-    function checkUserRole() {
-        firebase.auth().onAuthStateChanged(async function(user) {
-            if (user) {
-                const uid = user.uid;
-                const roleRef = firebase.database().ref(usuarios/${uid}/role);
-                const snapshot = await roleRef.once('value');
-                const role = snapshot.val();
+        // Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
+        function checkUserRole() {
+            firebase.auth().onAuthStateChanged(async function(user) {
+                if (user) {
+                    const uid = user.uid;
+                    const roleRef = firebase.database().ref(`usuarios/${uid}/role`);
+                    const snapshot = await roleRef.once('value');
+                    const role = snapshot.val();
 
-                // Exibe o botão PDF se o role for "professor" ou "proprietário"
-                if (role === "professor" || role === "proprietário") {
-                    document.getElementById("pdfButton").style.display = "block";
+                    // Exibe o botão PDF se o role for "professor" ou "proprietário"
+                    if (role === "professor" || role === "proprietário") {
+                        document.getElementById("pdfButton").style.display = "block";
+                    }
+                } else {
+                    console.log("Nenhum usuário logado.");
                 }
-            } else {
-                console.log("Nenhum usuário logado.");
-            }
-        });
-    }
+            });
+        }
 
-    // Verifica o role do usuário ao carregar a página
-    document.addEventListener("DOMContentLoaded", () => {
-        checkUserRole();
-        init();  // Carrega o conteúdo inicial da página
-    });
+        // Verifica o role do usuário ao carregar a página
+        document.addEventListener("DOMContentLoaded", () => {
+            checkUserRole();
+            init();  // Carrega o conteúdo inicial da página
+        });
 
         // Função para identificar Level, Unit e fase atual pelo URL
         function getParamsFromURL() {
@@ -69,222 +69,102 @@
         // Função para salvar progresso no Firebase com todas as regras
         async function salvarProgressoAluno(uid, fase) {
             const { level, unit } = getParamsFromURL();
-            const dbRef = firebase.database().ref(usuarios/${uid}/progresso);
+            const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
 
             try {
                 if (fase === "end") {
-                    // Criar nova Level com Unit1/fase1
-                    const nextLevel = Level${parseInt(level.replace('Level', '')) + 1};
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                     await dbRef.child(nextLevel).set({});
-                    await dbRef.child(${nextLevel}/Unit1/fase1).set(true);
-                    console.log(Nova Level ${nextLevel} criada com Unit1/fase1.);
+                    await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
+                    console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
                 } else if (fase === "last") {
-                    // Criar nova Unit com fase1
-                    const nextUnit = Unit${parseInt(unit.replace('Unit', '')) + 1};
-                    await dbRef.child(${level}/${nextUnit}).set({});
-                    await dbRef.child(${level}/${nextUnit}/fase1).set(true);
-                    console.log(Nova Unit ${nextUnit} criada com fase1 em ${level}.);
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    await dbRef.child(`${level}/${nextUnit}`).set({});
+                    await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
+                    console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
                 } else {
-                    // Criar próxima fase na mesma Unit
-                    const nextFase = fase${parseInt(fase) + 1};
-                    await dbRef.child(${level}/${unit}/${nextFase}).set(true);
-                    console.log(Fase ${nextFase} criada em ${level}/${unit}.);
+                    const nextFase = `fase${parseInt(fase) + 1}`;
+                    await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
+                    console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
                 }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
             }
         }
 
-function generatePDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
+        function generatePDF() {
+            const { jsPDF } = window.jspdf;
+            const doc = new jsPDF();
 
-    // Adiciona a logo
-    doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Posiciona a logo no PDF
+            // Adiciona a logo
+            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Posiciona a logo no PDF
 
-    // Campos de nome e data
-    doc.setFontSize(12);
-    doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
+            // Campos de nome e data
+            doc.setFontSize(12);
+            doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
 
-    // Título
-    doc.setFontSize(20);
-    doc.text(storyTitle, 105, 80, { align: "center" });
+            // Título
+            doc.setFontSize(20);
+            doc.text(storyTitle, 105, 80, { align: "center" });
 
-// Verifica se storyText foi carregado
-if (!storyText) {
-    alert("A história ainda não foi carregada. Tente novamente.");
-    return;
-}
+            if (!storyText) {
+                alert("A história ainda não foi carregada. Tente novamente.");
+                return;
+            }
 
-    // Texto da história
-    doc.setFontSize(12);
-    let y = 100;  // Posição inicial para o texto
-    const marginLeft = 10;
-    const maxLineWidth = 180;
-    const lineHeight = 10;
+            // Texto da história
+            doc.setFontSize(12);
+            let y = 100;  
+            const marginLeft = 10;
+            const maxLineWidth = 180;
+            const lineHeight = 10;
 
-    const splitText = doc.splitTextToSize(storyText, maxLineWidth);
-    splitText.forEach(line => {
-        if (y > 280) {
-            doc.addPage();
-            y = 20;
+            const splitText = doc.splitTextToSize(storyText, maxLineWidth);
+            splitText.forEach(line => {
+                if (y > 280) {
+                    doc.addPage();
+                    y = 20;
+                }
+                doc.text(line, marginLeft, y);
+                y += lineHeight;
+            });
+
+            doc.save("story.pdf");  // Salva o PDF com o nome 'story.pdf'
         }
-        doc.text(line, marginLeft, y);
-        y += lineHeight;
-    });
 
-    doc.save("story.pdf");  // Salva o PDF com o nome 'story.pdf'
-}
+        async function loadContent() {
+            const response = await fetch('images.txt');
+            const text = await response.text();
+            const lines = text.split('\n');
+            let cards = [];
+            let currentImage = '';
+            let currentText = '';
 
-async function loadContent() {
-    const response = await fetch('images.txt');
-    const text = await response.text();
-    const lines = text.split('\n');
-    let cards = [];
-    let currentImage = '';
-    let currentText = '';
+            lines.forEach(line => {
+                if (line.startsWith('#imagem')) {
+                    if (currentImage && currentText) {
+                        cards.push({ image: currentImage, text: currentText });
+                    }
+                    currentImage = line.replace('#', '').trim();
+                    currentText = '';
+                } else {
+                    currentText += line + ' ';
+                }
+            });
 
-    lines.forEach(line => {
-        if (line.startsWith('#imagem')) {
             if (currentImage && currentText) {
                 cards.push({ image: currentImage, text: currentText });
             }
-            currentImage = line.replace('#', '').trim();
-            currentText = '';
-        } else {
-            currentText += line + ' ';
+
+            storyText = cards.map(card => card.text).join('\n\n');
+            return cards;
         }
-    });
 
-    if (currentImage && currentText) {
-        cards.push({ image: currentImage, text: currentText });
-    }
-
-    // Preenche storyText com o conteúdo da história para o PDF
-    storyText = cards.map(card => card.text).join('\n\n');
-    return cards;
-}
-
-document.addEventListener("DOMContentLoaded", init);
+        document.addEventListener("DOMContentLoaded", init);
     </script>
 
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: url('../../../imagens/fundo.png');
-            background-repeat: repeat;
-            background-size: auto;
-            color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .container {
-            max-width: 900px;
-            width: 100%;
-            margin: 30px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #4CAF50;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-        .title {
-            font-size: 2em;
-            color: #333;
-            margin: 20px 0;
-            text-align: center;
-        }
-        .card {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
-            padding: 20px;
-            background-color: #f0f8ff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            cursor: pointer;
-            width: 100%;
-            max-width: 100%;
-            min-height: 100px;
-            position: relative;
-        }
-        .active {
-            display: flex;
-        }
-        .card img {
-            max-width: 100%;
-            max-height: calc(100vh - 150px);
-            border-radius: 10px;
-            margin-bottom: 20px;
-        }
-        .card p {
-            font-size: 1.5em;
-            text-align: center;
-            color: #333;
-            margin: 0;
-        }
-        .businessman {
-            position: absolute;
-            top: 10px;
-            right: 30px;
-            width: 40px;
-            height: 40px;
-            cursor: pointer;
-            z-index: 10;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
-        }
-        button {
-            margin: 20px;
-            padding: 15px 30px;
-            font-size: 18px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .navigation {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            margin-top: 20px;
-        }
-        .button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-    .story-text {
-        background-color: #e7f3ff; /* cor de fundo azul claro */
-        padding: 20px;
-        border-radius: 10px;
-        margin: 0 auto; /* centraliza o elemento */
-        max-width: 80%; /* ajuste a largura conforme necessário */
-        text-align: center;
-    }
+        /* Your CSS styling here */
     </style>
 </head>
 <body>
@@ -309,14 +189,12 @@ document.addEventListener("DOMContentLoaded", init);
         let currentCardIndex = 0;
         let cardsData = [];
 
-        // Função para alternar entre texto e imagem
         function toggleView() {
             showText = !showText;
             document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
             displayCard(currentCardIndex);
         }
 
-        // Função para exibir o card atual
         function displayCard(index) {
             const container = document.getElementById('cardsContainer');
             container.innerHTML = '';
@@ -325,9 +203,9 @@ document.addEventListener("DOMContentLoaded", init);
             cardElement.className = 'card active';
 
             if (showText) {
-                cardElement.innerHTML = <div class="card-text"><p>${cardData.text}</p></div>;
+                cardElement.innerHTML = `<div class="story-text"><p>${cardData.text}</p></div>`;
             } else {
-                cardElement.innerHTML = <img src="images/${cardData.image}.jpeg" alt="Image">;
+                cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image">`;
             }
 
             const businessmanImage = document.createElement('img');
@@ -338,7 +216,6 @@ document.addEventListener("DOMContentLoaded", init);
             cardElement.appendChild(businessmanImage);
             container.appendChild(cardElement);
 
-            // Verifica se é o último card
             if (index === cardsData.length - 1) {
                 firebase.auth().onAuthStateChanged(function(user) {
                     if (user) {
@@ -350,12 +227,10 @@ document.addEventListener("DOMContentLoaded", init);
                 });
             }
 
-            // Atualiza botões de navegação
             document.getElementById('prevBtn').style.display = (index === 0) ? 'none' : 'block';
             document.getElementById('nextBtn').style.display = (index === cardsData.length - 1) ? 'none' : 'block';
         }
 
-        // Função para iniciar ou parar a leitura do texto
         function toggleSpeech(text) {
             if (window.speechSynthesis.speaking) {
                 window.speechSynthesis.cancel();
@@ -366,19 +241,16 @@ document.addEventListener("DOMContentLoaded", init);
             }
         }
 
-        // Função para exibir o próximo card
         function showNextCard() {
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
-        // Função para exibir o card anterior
         function showPreviousCard() {
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
-        // Função para inicializar a página com o primeiro card
         async function init() {
             cardsData = await loadContent();
             displayCard(0);
