--- a/Level1/Unit1/StoryCards/index.html
+++ b/Level1/Unit1/StoryCards/index.html
@@ -28,8 +28,8 @@
         firebase.initializeApp(firebaseConfig);
 
         // Variáveis globais para o título e texto da história para o PDF
-        let storyTitle = "Hannah Story"; // Exemplo de título para o PDF
-        let storyText = ""; // Variável que irá conter o texto da história
+        let storyTitle = "Hannah Story"; 
+        let storyText = ""; 
 
         // Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
         function checkUserRole() {
@@ -40,7 +40,6 @@
                     const snapshot = await roleRef.once('value');
                     const role = snapshot.val();
 
-                    // Exibe o botão PDF se o role for "professor" ou "proprietário"
                     if (role === "professor" || role === "proprietário") {
                         document.getElementById("pdfButton").style.display = "block";
                     }
@@ -53,10 +52,9 @@
         // Verifica o role do usuário ao carregar a página
         document.addEventListener("DOMContentLoaded", () => {
             checkUserRole();
-            init();  // Carrega o conteúdo inicial da página
+            init(); 
         });
 
-        // Função para identificar Level, Unit e fase atual pelo URL
         function getParamsFromURL() {
             const urlParams = new URLSearchParams(window.location.search);
             const fase = urlParams.get('fase');
@@ -66,7 +64,6 @@
             return { level, unit, fase };
         }
 
-        // Função para salvar progresso no Firebase com todas as regras
         async function salvarProgressoAluno(uid, fase) {
             const { level, unit } = getParamsFromURL();
             const dbRef = firebase.database().ref(`usuarios/${uid}/progresso`);
@@ -76,16 +73,13 @@
                     const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
                     await dbRef.child(nextLevel).set({});
                     await dbRef.child(`${nextLevel}/Unit1/fase1`).set(true);
-                    console.log(`Nova Level ${nextLevel} criada com Unit1/fase1.`);
                 } else if (fase === "last") {
                     const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
                     await dbRef.child(`${level}/${nextUnit}`).set({});
                     await dbRef.child(`${level}/${nextUnit}/fase1`).set(true);
-                    console.log(`Nova Unit ${nextUnit} criada com fase1 em ${level}.`);
                 } else {
                     const nextFase = `fase${parseInt(fase) + 1}`;
                     await dbRef.child(`${level}/${unit}/${nextFase}`).set(true);
-                    console.log(`Fase ${nextFase} criada em ${level}/${unit}.`);
                 }
             } catch (error) {
                 console.error("Erro ao atualizar o progresso da fase:", error);
@@ -96,14 +90,11 @@
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Adiciona a logo
-            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Posiciona a logo no PDF
+            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);
 
-            // Campos de nome e data
             doc.setFontSize(12);
             doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
 
-            // Título
             doc.setFontSize(20);
             doc.text(storyTitle, 105, 80, { align: "center" });
 
@@ -112,7 +103,6 @@
                 return;
             }
 
-            // Texto da história
             doc.setFontSize(12);
             let y = 100;  
             const marginLeft = 10;
@@ -129,7 +119,7 @@
                 y += lineHeight;
             });
 
-            doc.save("story.pdf");  // Salva o PDF com o nome 'story.pdf'
+            doc.save("story.pdf");
         }
 
         async function loadContent() {
@@ -164,7 +154,133 @@
     </script>
 
     <style>
-        /* Your CSS styling here */
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-image: url('../../../imagens/fundo.png');
+            background-repeat: repeat;
+            background-size: auto;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .container {
+            max-width: 900px;
+            width: 100%;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: #4CAF50;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .title {
+            font-size: 2em;
+            color: #333;
+            margin: 20px 0;
+            text-align: center;
+        }
+
+        .card {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #f0f8ff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            cursor: pointer;
+            width: 100%;
+            max-width: 100%;
+            min-height: 100px;
+            position: relative;
+        }
+
+        .active {
+            display: flex;
+        }
+
+        .card img {
+            max-width: 100%;
+            max-height: calc(100vh - 150px);
+            border-radius: 10px;
+            margin-bottom: 20px;
+        }
+
+        .card p {
+            font-size: 1.5em;
+            text-align: center;
+            color: #333;
+            margin: 0;
+        }
+
+        .businessman {
+            position: absolute;
+            top: 10px;
+            right: 30px;
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            z-index: 10;
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+        }
+
+        button {
+            margin: 20px;
+            padding: 15px 30px;
+            font-size: 18px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .navigation {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .story-text {
+            background-color: #e7f3ff;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 0 auto;
+            max-width: 80%;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
